fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,13 @@ textarea {
   width: 100%;
 }
 
+html, body {
+  /* margin: 0;
+  padding: 0; */
+  overflow-x: hidden;
+}
+
+
 /* Responsive design: su schermi piccoli torna su una colonna */
 @media (max-width: 768px) {
   form {
